# UPGEM

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_MODE_GUIDE.md  DEVELOPMENT_STARTED.md  DOCUMENTATION_INDEX.md  ENHANCEMENTS_COMPLETE.md  GETTING_STARTED.md  LICENSE-APACHE  LICENSE-MIT  PHASE_6_BEFORE_AFTER.md  PHASE_6_CHECKLIST.md  PHASE_6_DOCUMENTATION_INDEX.md  PHASE_6_TECHNICAL_SUMMARY.md  PHASE_6_UPDATES.md  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  README.md  SECURITY.md  SETUP_COMPLETE.md  STRUCTURE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: INSTALLATION.md  USER_GUIDE.md
src/: App.vue  main.ts
src-tauri/: error.rs  main.rs  state.rs  tauri.conf.json
src-tauri/crypto/: encryption.rs  hashing.rs  key_derivation.rs  mod.rs
src-tauri/db/: mod.rs  models.rs  operations.rs  schema.rs
src-tauri/handlers/: auth.rs  habit.rs  mod.rs  skill.rs
src-tauri/state/: app_state.rs
src/components/: AnalyticsDashboard.vue  AppHeader.vue  AppSidebar.vue  FloatingActionButton.vue  HabitHeatmap.vue  LearningJournal.vue
src/router/: index.ts
src/stores/: auth.ts  customization.ts  gamification.ts  skill.ts  themes.ts
src/utils/: export.ts  notifications.ts
src/views/: Calendar.vue  Dashboard.vue  Habits.vue  Login.vue  Settings.vue  Skills.vue
